# FEX-AOT

./: AGENTS.md  Readme.md
.github/: copilot-instructions.md
FEXCore/Source/Interface/Core/: CodeCache.cpp
Scripts/dev/: README.md  aot_canary.c  run_aot_guardrail_x86_dev.sh  run_aot_perf_benchmark_x86_dev.sh  run_local_aot_regressions_x86_dev.sh  run_x86_dev.sh  setup_x86_dev.sh  undo_x86_dev.sh
Source/Common/: Config.cpp  Config.h
Source/Tools/: CMakeLists.txt
Source/Tools/FEXOfflineCompiler/: Main.cpp
Source/Tools/FEXServer/: ProcessPipe.cpp
Source/Tools/FEXStaticCodeMapGen/: CMakeLists.txt  Main.cpp
Source/Tools/LinuxEmulation/LinuxSyscalls/: Syscalls.cpp  Syscalls.h  SyscallsSMCTracking.cpp
